--- a/app/views/fighters/index.html.erb
+++ b/app/views/fighters/index.html.erb
@@ -1,5 +1,2 @@
-<h1>Fighters List</h1>
-<%@fighters.each do |fighter| %>
-<p><%= fighter.full_name %></p>
-<p><%= fighter.division_string %></p>
-<%end%>
+
+<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>
