fix: react component renders at 100% height

--- a/app/views/fighters/index.html.erb
+++ b/app/views/fighters/index.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <body>
-  <%= react_component("Index", {fighters: @fighters}) %>
+
+  <%= react_component("Home", {fighters: @fighters}, {:style => "height:100%"})%>
 </body>
